--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
          </section>
          <!-- Footer -->
          <footer id="footer">
-            <p> Made by Daniel, who learnt CSS and HTML for this website </p>
+            <p> Made by Daniel, who learnt CSS and HTML for this website. </p>
             <p class="copyright">Design: <a href="https://templated.co">TEMPLATED</a> </p>
          </footer>
       </div>
