--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <section id="intro" class="main">
             <span class="icon fa-heart-o major"></span>
             <h2>Welcome</h2>
-            <p>Thank you for visting Megan and Daniel's wedding website.
+            <p>Thank you for visting Daniel and Megan's wedding website.
                <br /> We are excited to have you with us!
                <br /> We will be married on the 24<sup>th</sup> of February 2019 at Gracehill Vineyard Estate.
                <br />
