changed we to they

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                   </div>
                   <div class="mySlides fade">
                      <img class="n-images" src="images/s9.jpg"> </br>
-                     <p> Little did Megan know, Daniel had planned more for Japan than just the trip. In 2017, during the snowy February in Sapporo, Daniel proposed in a quiet street during the snow festival. Truthfully, they were lost in a foreign city, and he thought it would be good timing while they were surrounded by piles of snow with noone around. </p>
+                     <p> Little did Megan know, Daniel had planned more for Japan than just the trip. In 2017, during the snowy February in Sapporo, Daniel proposed in a quiet street during the snow festival. Truthfully, we were lost in a foreign city, and he thought it would be good timing while we were surrounded by piles of snow with noone around. </p>
                   </div>
                   <div class="mySlides fade">
                      <img class="n-images" src="images/s11.jpg"> </br>
