--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
          <section id="cta" class="main special">
             <h2 id="thewedding">The Wedding</h2>
             <p>
-            <h4><b>24/02/2019</b></h4>
+            <h4><b>Wedding Day Schedule</b></h4>
             </p>
             <p> Schedule to be confirmed</br>
             </p>
             <h4>Location</h4>
             <div class="iframe-container">
-               <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAaReSUztUiEtBJaZlPQ0EbcQe2XULdWFI&q=Gracehill+Vineyard" allowfullscreen> </iframe>
+               <iframe width="600" height="450" frameborder="1" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAaReSUztUiEtBJaZlPQ0EbcQe2XULdWFI&q=Gracehill+Vineyard&zoom=12" allowfullscreen> </iframe>
             </div>
             </p>
             <p>
@@ -190,7 +190,7 @@
          </section>
          <section id="cta" class="main special">
             <h2 id="registry">Registry</h2>
-            <p>We are grateful enough to share this event with our closest friends and family.
+            <p>We are grateful to share this event with our closest friends and family.
                <br /> We have spent the last 4 years living together, and are fortunate enough to have everything we need to build a home together,</br> other than Auckland home ownership.
                <br />
                <br /> If you would like to give a gift, in lieu of traditional housewares we have set up a honeymoon registry.
