--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                <br /> </br>
                </br> <span class="icon fa-envelope-o major"></span>
             <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSfmavwJVLrDIVlVQnm1VAD3H1CQwEFqvzcnQrNL45IlHZpTOw/viewform?usp=sf_link">CLICK HERE TO RSVP</a></h2>
-            <p><b>Please RSVP before 24th November 2018</b>
+            <h2>RSVPs are now closed</h2>
+            <p>
                </br> For any enquiries related to your RSVP please contact Daniel.</br> Phone: 021 2177494</br> Email: d.quach.nz@gmail.com</br>
          </section>
          <hr>
@@ -88,21 +89,27 @@
          <section id="cta" class="main special">
             <h2 id="thewedding">The Wedding</h2>
             <p>
-            <h4><b>Wedding Day Schedule</b></h4>
+            <h3><b>24/02/2019</b></h4>
             </p>
-            <p> Schedule to be confirmed</br>
+            <p> 
+            <h4>The Schedule</h4>
+            <b><ins>3.00 PM</ins></b></br> Guests arrive</br>
+            <b><ins>3.30 PM</ins></b></br> Ceremony</br>
+            <b><ins>4.00 PM</ins></b></br> Canapés and photo session</br>
+            <b><ins>5.30 PM</ins></b></br> Reception and dinner</br>
+            <b><ins>11.00 PM</ins></b></br> Please vacate Gracehill by this time. Please contact us if you would like to carpool.</br>
             </p>
+            </br></br>
+
             <h4>Location</h4>
             <div class="iframe-container">
-               <iframe width="600" height="450" frameborder="1" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAaReSUztUiEtBJaZlPQ0EbcQe2XULdWFI&q=Gracehill+Vineyard&zoom=12" allowfullscreen> </iframe>
+               <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAaReSUztUiEtBJaZlPQ0EbcQe2XULdWFI&q=Gracehill+Vineyard" allowfullscreen> </iframe>
             </div>
             </p>
             <p>
-            <h4>Bar info</h4>
-            We will have a bar tab going, to help prepare you for Monday morning.</br> <b><ins>Wines:</ins></b> 2 Reds, 2 Whites.</br> <b><ins>Beers:</ins></b> Corona, Heineken, Stella Artois, Peroni, Macs Green Beret IPA, Hallertau Range, Amstel Light.</br> <b><ins>Non-Alcoholic:</ins></b> Juice, Soda.</br>
-            </p>
             <h4>Additional information</h4>
             <b><ins>Parking:</ins></b> There is lots of parking at the venue, but please do not drink and drive!</br> If you are concerned about transport, contact us and we can help organise trips to ease costs.</br> <b><ins>Dress Code: </ins></b> Cocktail / semiformal. </br>
+            </br>
             </p>
             <br />
             <ul class="actions">
@@ -113,16 +120,31 @@
          </section>
          <!-- CTA -->
          <section id="cta" class="main special">
-            <h2 id="food">The Food</h2>
+            <h2 id="food">The Menu</h2>
             <p> There will be a three-course meal, with a choice of two Entrees, Mains and Desserts. Vegetarians will have their own Entree and Main.
-            <h4>Entree</h4>
-            To Be confirmed</br>
+            </p>
+             </p>
+            <img src="images/menu.png" alt="The Menu"> 
+            </p>
+            <h2 id="drinks">The Drinks</h2>
+            <h4>Red Wine</h4>
+            Montana Festival Block Pinot Noir</br>
+            Church Road McDonald Series Syrah</br>
             </br>
-            <h4>Main</h4>
-            To Be confirmed</br>
+            <h4>White Wine</h4>
+            Montana Festival Block Chardonnay</br>
+            Montana Festival Block Sauvignon Blanc</br>
+            Stoneleigh Riesling</br>
             </br>
-            <h4>Dessert</h4>
-            To Be confirmed</br> Cake </p>
+            <h4>Beer and Cider</h4>
+            Corona, Heinekin, Peroni, Amstel Light, Tiger, Macs Green IPA</br>
+            Hallertau Beers</br>
+            Hallertau Granny Smith Cider</br>
+            </br>
+            <h4>Non-Alcoholic</h4>
+            Soft Drinks</br> Juice </br> Sparkling Grape Juice</br>
+            </br>
+            </p>
             <ul class="actions">
                <li><a href="#" class="button">Return to Top</a> </li>
             </ul>
@@ -164,7 +186,7 @@
                   </div>
                   <div class="mySlides fade">
                      <img class="n-images" src="images/s9.jpg"> </br>
-                     <p> Little did Megan know, Daniel had planned more for Japan than just the trip. In 2017, during the snowy February in Sapporo, Daniel proposed in a quiet street during the snow festival. Truthfully, we were lost in a foreign city, and he thought it would be good timing while we were surrounded by piles of snow with noone around. </p>
+                     <p> Little did Megan know, Daniel had planned more for Japan than just the trip. In 2017, during the snowy February in Sapporo, Daniel proposed in a quiet street during the snow festival. Truthfully, they were lost in a foreign city, and he thought it would be good timing while they were surrounded by piles of snow with noone around. </p>
                   </div>
                   <div class="mySlides fade">
                      <img class="n-images" src="images/s11.jpg"> </br>
@@ -206,7 +228,7 @@
          </section>
          <!-- Footer -->
          <footer id="footer">
-            <p> Made by Daniel, who learnt CSS and HTML for this website. </p>
+            <p> Made by Daniel, who learnt CSS and HTML for this website </p>
             <p class="copyright">Design: <a href="https://templated.co">TEMPLATED</a> </p>
          </footer>
       </div>
