--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <!-- Header -->
       <header id="header" class="alt">
          <div class="inner">
-            <h1>Daniel and Megan</h1>
-            <p>24/02/2019 at Gracehill Vineyard Estate</a>
+            <h1>Daniel and Megan Quach</h1>
+            <p>24 <sup>th</sup> Feb 2019 at Gracehill Vineyard Estate</a>
             </p>
          </div>
       </header>
@@ -34,7 +34,6 @@
                <br />
                <br /> </br>
                </br> <span class="icon fa-envelope-o major"></span>
-            <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSfmavwJVLrDIVlVQnm1VAD3H1CQwEFqvzcnQrNL45IlHZpTOw/viewform?usp=sf_link">CLICK HERE TO RSVP</a></h2>
             <h2>RSVPs are now closed</h2>
             <p>
                </br> For any enquiries related to your RSVP please contact Daniel.</br> Phone: 021 2177494</br> Email: d.quach.nz@gmail.com</br>
