Revert changes for training

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <!-- Header -->
       <header id="header" class="alt">
          <div class="inner">
-            <h1>Daniel and Megan Quach</h1>
-            <p>24 <sup>th</sup> Feb 2019 at Gracehill Vineyard Estate</a>
+            <h1>Daniel and Megan</h1>
+            <p>24/02/2019 at Gracehill Vineyard Estate</a>
             </p>
          </div>
       </header>
