--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    -->
 <html>
    <head>
-      <title>Daniel and Megan 2019</title>
+      <title>Daniel and Megan Feb 2019</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" href="assets/css/main.css" />
