added the wedding to title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Header -->
       <header id="header" class="alt">
          <div class="inner">
-            <h1>Daniel and Megan</h1>
+            <h1>Daniel and Megan's Wedding</h1>
             <p>24/02/2019 at Gracehill Vineyard Estate</a>
             </p>
          </div>
